force-app/main/default/objects/Report_Finder_User_Bookmark__c/Report_Finder_User_Bookmark__c.object-meta.xml
<CustomObject>
    <description>Associative entity between Report Finder Items and Users. Used to bookmark/favorite reports for user quick reference.</description>
    <label>Report Finder User Bookmark</label>
    <nameField>
        <displayFormat>RFUBM-{0}</displayFormat>
        <label>Report Bookmark #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Finder User Bookmarks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>