force-app/main/default/objects/Report_Finder_User_Bookmark__c/fields/Advancement_Report__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Report__c</fullName>
    <label>Advancement Report</label>
    <referenceTo>Advancement_Report__c</referenceTo>
    <relationshipLabel>Report Finder User Bookmarks</relationshipLabel>
    <relationshipName>Report_Finder_User_Bookmarks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>