force-app/main/default/objects/Report_Finder_User_Bookmark__c/fields/Bookmarked_By__c.field-meta.xml
<CustomField>
    <fullName>Bookmarked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bookmarked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advancement_Report_Favorites</relationshipName>
    <type>Lookup</type>
</CustomField>