force-app/main/default/objects/Report_Finder_User_Bookmark__c/fields/Report_Finder_Item__c.field-meta.xml
<CustomField>
    <fullName>Report_Finder_Item__c</fullName>
    <label>Report Finder Item</label>
    <referenceTo>Report_Finder_Item__c</referenceTo>
    <relationshipLabel>Report Finder User Bookmarks</relationshipLabel>
    <relationshipName>Report_Finder_User_Bookmarks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>